<resources>
    <string name="app_name">MyBudget</string>
    <string name="app_tag">Track your money</string>
    <string name="welcome">Welcome</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgotPassword">Forgot Password?</string>
    <string name="signUp">Create Account</string>
    <string name="email_error">Please insert email.</string>
    <string name="username_error">Please insert username.</string>
    <string name="password_error">Please insert password.</string>
    <string name="fields_error">Please fill in the fields.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>